# numpyro-extras

./: AGENTS.md  CONTRACTS.md  README.md  checklist.md  instruction_01_tests_for_mixture_inverse_cdf.md  instruction_02_tests_for_knot_generation.md  instruction_03_tests_for_quantile_interpolator.md  instruction_04_tests_for_numpyro_transforms.md  instruction_05_tests_for_integration_and_validation.md  instruction_06_mixture_inverse_cdf.md  instruction_07_knot_generation.md  instruction_08_quantile_interpolator.md  instruction_09_numpyro_transforms.md  instruction_10_integration_and_validation.md  pyproject.toml
.codex-step-runs/: run_1.last_message.txt  run_2.last_message.txt  run_3.last_message.txt  run_4.last_message.txt  run_5.last_message.txt  run_6.last_message.txt  run_7.last_message.txt  run_8.last_message.txt  run_9.last_message.txt
notebooks/: linear_regression_transformed_mixture_priors.ipynb  mixture_transform_builder_demo.ipynb  normal_to_mixture_bijection_demo.ipynb
old-code/: ecdf-scaler.py
scripts/: run_codex_steps.sh
src/numpyro_extras/: __about__.py  __init__.py  distribution_quantile.py  distribution_transform_builder.py  distributions.py  mixture_knots.py  mixture_quantile.py  mixture_transform_builder.py  quantile_interpolator.py  transforms.py  util.py
tests/: test_distribution_quantile.py  test_distribution_transform_builder.py  test_distribution_transforms.py  test_distributions.py  test_mixture_knots.py  test_mixture_quantile.py  test_mixture_transform_builder.py  test_mixture_transform_performance_smoke.py  test_mixture_transforms.py  test_quantile_interpolator.py  test_quantile_knots.py  test_transforms.py
